# video_library

./: .env.example  .gitignore  FACE_RECOGNITION_NEW.md  FACE_RECOGNITION_SETUP.md  README.md  compress.sh  face_database.py  face_recognizer.py  pyproject.toml  transcript_summarizer.py  trim.sh  video_transcriber.py  video_viewer_app.py
.windsurf/rules/: poetry.md
templates/: face_library.html  face_library_old.html  index.html  player.html
