[tool.poetry]
name = "screen-recording"
version = "0.1.0"
description = ""
authors = ["Moritz Laass <moritz.laass@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
ffmpeg-python = "^0.2.0"
faster-whisper = "^1.2.0"
soundfile = "^0.13.1"
torch = "^2.6.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
